# libadb

./: .gitignore  .markdownlint.yaml  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  Makefile.am  README.md  config.h.in  configure.ac  install_manifest.txt  libastrodb.pc.in
.agents/workflows/: add_feature.md
.github/workflows/: ci.yml
doc/: Makefile.am  doxyfile  doxyfile.bak
examples/: CMakeLists.txt  Makefile.am  Readme.md  Readme_GSC  gsc.c  hyperleda.c  ngc.c  sky2k.c  tycho.c  v84.c  vii110a.c  vii237.c
python/: setup.py
python/astrodb/: __init__.py  lib.py
python/examples/: gsc.py  gtk_ui.py  hyperleda.py  ngc.py  sky2k.py  tycho.py  v84.py  vii110a.py
python/tests/: test_astrodb.py  test_hash.py  test_import.py  test_kdtree.py  test_ngc.py  test_sky2k.py  test_solve.py
src/: CMakeLists.txt  Makefile.am  astrometry.c  cds.h  cds_file.c  cds_parse.c  db.c  debug.h  hash.c  hash.h  htm.h  htm_core.c  htm_file.c  htm_get.c  htm_import.c  htm_insert.c  import.c  import.h  kd_tree.c  lib.h  photometry.c  private.h  readme.h  schema.c  schema.h  search.c  solution.c  solve.c  solve.h  solve_dist.c  solve_mag.c  solve_pa.c  solve_posn.c  solve_target.c  table.c  table.h
src/libastrodb/: Makefile.am  adbstdio.h  astrodb.h  cds.h  db-import.h  db.h  hash.h  htm.h  import.h  object.h  private.h  readme.h  schema.h  search.h  solve.h  table.h
tests/: CMakeLists.txt  test_all.c  test_hash.c  test_htm.c  test_import.c  test_kdtree.c  test_ngc.c  test_schema.c  test_sky2k.c  test_solve.c  test_table.c
tests/Ast/Comets/: ReadMe
tests/Ast/MPC/: ReadMe
tests/V/109/: sky2kv4.db  sky2kv4.schema
tests/VII/118/: ngc2000.db  ngc2000.schema
