noinst_PROGRAMS = \
	sky2k \
	ngc \
	hyperleda
#	vii110a \
#	v84

AM_CFLAGS = -I../src

sky2k_SOURCES = \
	sky2k.c

#vii110a_SOURCES = \
#	vii110a.c

#v84_SOURCES = \
#	v84.c

ngc_SOURCES = \
	ngc.c
	
hyperleda_SOURCES = \
	hyperleda.c

sky2k_LDADD = \
	../src/libastrodb.la

#vii110a_LDADD = \
#	../src/libastrodb.la

#v84_LDADD = \
#	../src/libastrodb.la

ngc_LDADD = \
	../src/libastrodb.la
	
hyperleda_LDADD = \
	../src/libastrodb.la
